--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "firebase": "^9.6.9",
+    "gsap": "^3.9.1",
+    "sirv-cli": "^2.0.0",
+    "svelte-navigator": "^3.1.5"
   }
 }
