--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "autoprefixer": "^9.8.8",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
@@ -26,10 +27,14 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "dependencies": {
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.40",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.9",
     "gsap": "^3.9.1",
     "sirv-cli": "^2.0.0",
     "svelte-navigator": "^3.1.5",
-    "uuidv4": "^6.2.12"
+    "svite": "^0.11.0",
+    "uuidv4": "^6.2.12",
+    "vite": "^2.8.6"
   }
 }
